atg/torch_wrapper_gen.odin

	atg__nested_compute_contiguous_strides_offsets :: proc(out: ^Tensor, nested_size: Tensor) ---
	atg__nested_from_padded :: proc(out: ^Tensor, padded: Tensor, cpu_nested_shape_example: Tensor, fuse_transform_0213: c.int) ---
	atg__nested_from_padded_and_nested_example :: proc(out: ^Tensor, padded: Tensor, nt_example: Tensor) ---
	atg__nested_from_padded_and_nested_example_out :: proc(out: ^Tensor, padded: Tensor, nt_example: Tensor) ---
	atg__nested_from_padded_out :: proc(out: ^Tensor, padded: Tensor, cpu_nested_shape_example: Tensor, fuse_transform_0213: c.int) ---
	atg__nested_from_padded_tensor :: proc(out: ^Tensor, padded: Tensor, offsets: Tensor, dummy: Tensor, ragged_idx: i64, min_seqlen: Tensor, max_seqlen: Tensor, sum_S_v: i64, sum_S_null: rawptr) ---
	atg__nested_get_jagged_dummy :: proc(out: ^Tensor, any: Tensor) ---
	atg__nested_get_lengths :: proc(out: ^Tensor, self: Tensor) ---
	atg__nested_get_max_seqlen :: proc(out: ^Tensor, self: Tensor) ---
	atg__nested_get_min_seqlen :: proc(out: ^Tensor, self: Tensor) ---
	atg__nested_get_offsets :: proc(out: ^Tensor, self: Tensor) ---
	atg__nested_get_values :: proc(out: ^Tensor, self: Tensor) ---
	atg__nested_get_values_copy :: proc(out: ^Tensor, self: Tensor) ---
	atg__nested_get_values_copy_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__nested_select_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor, dim: i64, index: i64) ---
	atg__nested_sum_backward :: proc(out: ^Tensor, grad: Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg__nested_view_from_buffer :: proc(out: ^Tensor, self: Tensor, nested_size: Tensor, nested_strides: Tensor, offsets: Tensor) ---
	atg__nested_view_from_buffer_copy :: proc(out: ^Tensor, self: Tensor, nested_size: Tensor, nested_strides: Tensor, offsets: Tensor) ---
	atg__nested_view_from_buffer_copy_out :: proc(out: ^Tensor, self: Tensor, nested_size: Tensor, nested_strides: Tensor, offsets: Tensor) ---
	atg__nested_view_from_jagged :: proc(out: ^Tensor, self: Tensor, offsets: Tensor, dummy: Tensor, lengths: Tensor, ragged_idx: i64, min_seqlen: Tensor, max_seqlen: Tensor) ---
	atg__nested_view_from_jagged_copy :: proc(out: ^Tensor, self: Tensor, offsets: Tensor, dummy: Tensor, lengths: Tensor, ragged_idx: i64, min_seqlen: Tensor, max_seqlen: Tensor) ---
	atg__nested_view_from_jagged_copy_out :: proc(out: ^Tensor, self: Tensor, offsets: Tensor, dummy: Tensor, lengths: Tensor, ragged_idx: i64, min_seqlen: Tensor, max_seqlen: Tensor) ---
	atg__new_zeros_with_same_feature_meta :: proc(out: ^Tensor, self: Tensor, other: Tensor, self_num_batch_dims: i64) ---
	atg__new_zeros_with_same_feature_meta_out :: proc(out: ^Tensor, self: Tensor, other: Tensor, self_num_batch_dims: i64) ---
	atg__nnpack_spatial_convolution :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, padding_data: [^]i64, padding_len: c.int, stride_data: [^]i64, stride_len: c.int) ---
	atg__nnpack_spatial_convolution_out :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, padding_data: [^]i64, padding_len: c.int, stride_data: [^]i64, stride_len: c.int) ---
	atg__pack_padded_sequence :: proc(out: ^Tensor, input: Tensor, lengths: Tensor, batch_first: c.int) ---
	atg__pack_padded_sequence_backward :: proc(out: ^Tensor, grad: Tensor, input_size_data: [^]i64, input_size_len: c.int, batch_sizes: Tensor, batch_first: c.int) ---
	atg__pack_padded_sequence_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, input: Tensor, lengths: Tensor, batch_first: c.int) ---
	atg__pad_circular :: proc(out: ^Tensor, self: Tensor, pad_data: [^]i64, pad_len: c.int) ---
	atg__pad_enum :: proc(out: ^Tensor, self: Tensor, pad_data: [^]i64, pad_len: c.int, mode: i64, value_v: f64, value_null: rawptr) ---
	atg__pad_packed_sequence :: proc(out: ^Tensor, data: Tensor, batch_sizes: Tensor, batch_first: c.int, padding_value: Scalar, total_length: i64) ---
	atg__pdist_backward :: proc(out: ^Tensor, grad: Tensor, self: Tensor, p: f64, pdist: Tensor) ---
	atg__pdist_backward_out :: proc(out: ^Tensor, grad: Tensor, self: Tensor, p: f64, pdist: Tensor) ---
	atg__pin_memory :: proc(out: ^Tensor, self: Tensor, device: c.int) ---
	atg__pin_memory_out :: proc(out: ^Tensor, self: Tensor, device: c.int) ---
	atg__prelu_kernel :: proc(out: ^Tensor, self: Tensor, weight: Tensor) ---
	atg__prelu_kernel_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor, weight: Tensor) ---
	atg__print :: proc(s_ptr: cstring, s_len: c.int) ---
	atg__propagate_xla_data :: proc(input: Tensor, output: Tensor) ---
	atg__remove_batch_dim :: proc(out: ^Tensor, self: Tensor, level: i64, batch_size: i64, out_dim: i64) ---
	atg__reshape_alias :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int) ---
	atg__reshape_alias_copy :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int) ---
	atg__reshape_alias_copy_out :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int) ---
	atg__reshape_copy :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int) ---
	atg__reshape_from_tensor :: proc(out: ^Tensor, self: Tensor, shape: Tensor) ---
	atg__resize_output :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, device: c.int) ---
	atg__resize_output_ :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, device: c.int) ---
	atg__resize_output_out :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, device: c.int) ---
	atg__rowwise_prune :: proc(out: ^Tensor, weight: Tensor, mask: Tensor, compressed_indices_dtype: c.int) ---
	atg__safe_softmax :: proc(out: ^Tensor, self: Tensor, dim: i64, dtype: c.int) ---
	atg__sample_dirichlet :: proc(out: ^Tensor, self: Tensor) ---
	atg__sample_dirichlet_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__saturate_weight_to_fp16 :: proc(out: ^Tensor, weight: Tensor) ---
	atg__scaled_dot_product_attention_math :: proc(out: ^Tensor, query: Tensor, key: Tensor, value: Tensor, attn_mask: Tensor, dropout_p: f64, is_causal: c.int, dropout_mask: Tensor, scale_v: f64, scale_null: rawptr, enable_gqa: c.int) ---
	atg__scaled_dot_product_attention_math_for_mps :: proc(out: ^Tensor, query: Tensor, key: Tensor, value: Tensor, attn_mask: Tensor, dropout_p: f64, is_causal: c.int, dropout_mask: Tensor, scale_v: f64, scale_null: rawptr) ---
	atg__scaled_dot_product_cudnn_attention_backward :: proc(out: ^Tensor, grad_out: Tensor, query: Tensor, key: Tensor, value: Tensor, logsumexp: Tensor, philox_seed: Tensor, philox_offset: Tensor, attn_bias: Tensor, cum_seq_q: Tensor, cum_seq_k: Tensor, max_q: i64, max_k: i64, dropout_p: f64, is_causal: c.int, scale_v: f64, scale_null: rawptr) ---
	atg__scaled_dot_product_efficient_attention :: proc(out: ^Tensor, query: Tensor, key: Tensor, value: Tensor, attn_bias: Tensor, compute_log_sumexp: c.int, dropout_p: f64, is_causal: c.int, scale_v: f64, scale_null: rawptr) ---
	atg__scaled_dot_product_flash_attention_backward :: proc(out: ^Tensor, grad_out: Tensor, query: Tensor, key: Tensor, value: Tensor, logsumexp: Tensor, cum_seq_q: Tensor, cum_seq_k: Tensor, max_q: i64, max_k: i64, dropout_p: f64, is_causal: c.int, philox_seed: Tensor, philox_offset: Tensor, scale_v: f64, scale_null: rawptr) ---
	atg__scaled_dot_product_flash_attention_for_cpu :: proc(out: ^Tensor, query: Tensor, key: Tensor, value: Tensor, dropout_p: f64, is_causal: c.int, attn_mask: Tensor, scale_v: f64, scale_null: rawptr) ---
	atg__scaled_dot_product_flash_attention_for_cpu_backward :: proc(out: ^Tensor, grad_out: Tensor, query: Tensor, key: Tensor, value: Tensor, logsumexp: Tensor, dropout_p: f64, is_causal: c.int, attn_mask: Tensor, scale_v: f64, scale_null: rawptr) ---
	atg__scaled_grouped_mm :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, scale_a: Tensor, scale_b: Tensor, offs: Tensor, bias: Tensor, scale_result: Tensor, out_dtype: c.int, use_fast_accum: c.int) ---
	atg__scaled_mm :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, scale_a: Tensor, scale_b: Tensor, bias: Tensor, scale_result: Tensor, out_dtype: c.int, use_fast_accum: c.int) ---
	atg__scaled_mm_out :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, scale_a: Tensor, scale_b: Tensor, bias: Tensor, scale_result: Tensor, out_dtype: c.int, use_fast_accum: c.int) ---
	atg__scatter_reduce :: proc(out: ^Tensor, self: Tensor, dim: i64, index: Tensor, src: Tensor, reduce_ptr: cstring, reduce_len: c.int, include_self: c.int) ---
	atg__scatter_reduce_ :: proc(out: ^Tensor, self: Tensor, dim: i64, index: Tensor, src: Tensor, reduce_ptr: cstring, reduce_len: c.int, include_self: c.int) ---
	atg__scatter_reduce_two_out :: proc(out: ^Tensor, self: Tensor, dim: i64, index: Tensor, src: Tensor, reduce_ptr: cstring, reduce_len: c.int, include_self: c.int) ---
	atg__segment_reduce_backward :: proc(out: ^Tensor, grad: Tensor, output: Tensor, data: Tensor, reduce_ptr: cstring, reduce_len: c.int, lengths: Tensor, offsets: Tensor, axis: i64, initial: Scalar) ---
	atg__segment_reduce_backward_out :: proc(out: ^Tensor, grad: Tensor, output: Tensor, data: Tensor, reduce_ptr: cstring, reduce_len: c.int, lengths: Tensor, offsets: Tensor, axis: i64, initial: Scalar) ---
	atg__shape_as_tensor :: proc(out: ^Tensor, self: Tensor) ---
	atg__slow_conv2d_backward :: proc(out: ^Tensor, grad_input: Tensor, grad_weight: Tensor, grad_bias: Tensor, grad_output: Tensor, self: Tensor, weight: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int) ---
	atg__sobol_engine_draw :: proc(out: ^Tensor, quasi: Tensor, n: i64, sobolstate: Tensor, dimension: i64, num_generated: i64, dtype: c.int) ---
	atg__sobol_engine_ff_ :: proc(out: ^Tensor, self: Tensor, n: i64, sobolstate: Tensor, dimension: i64, num_generated: i64) ---
	atg__sobol_engine_initialize_state_ :: proc(out: ^Tensor, self: Tensor, dimension: i64) ---
	atg__sobol_engine_scramble_ :: proc(out: ^Tensor, self: Tensor, ltm: Tensor, dimension: i64) ---
	atg__softmax :: proc(out: ^Tensor, self: Tensor, dim: i64, half_to_float: c.int) ---
	atg__softmax_backward_data :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, dim: i64, input_dtype: c.int) ---
	atg__softmax_backward_data_out :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, output: Tensor, dim: i64, input_dtype: c.int) ---
	atg__softmax_out :: proc(out: ^Tensor, self: Tensor, dim: i64, half_to_float: c.int) ---
	atg__sparse_addmm :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor) ---
	atg__sparse_addmm_out :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor) ---
	atg__sparse_broadcast_to :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int) ---
	atg__sparse_broadcast_to_copy :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int) ---
	atg__sparse_broadcast_to_copy_out :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int) ---
	atg__sparse_bsc_tensor_unsafe :: proc(out: ^Tensor, ccol_indices: Tensor, row_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int) ---
	atg__sparse_bsr_tensor_unsafe :: proc(out: ^Tensor, crow_indices: Tensor, col_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int) ---
	atg__sparse_compressed_tensor_unsafe :: proc(out: ^Tensor, compressed_indices: Tensor, plain_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int) ---
	atg__sparse_compressed_tensor_with_dims :: proc(out: ^Tensor, nnz: i64, dense_dim: i64, size_data: [^]i64, size_len: c.int, blocksize_data: [^]i64, blocksize_len: c.int, index_dtype: c.int, options_kind: c.int, options_device: c.int) ---
